{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 13,
  "lineage": "51ef54d6-54c6-3ce3-d753-5a1cf9bb85f6",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "staging-nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00194a61e8dabf014",
            "public_dns": "ec2-34-250-153-255.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.250.153.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging Nat EIP",
              "env": "staging"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "staging-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c2ed8aed558f2ab8",
            "owner_id": "845657178663",
            "tags": {
              "Name": "Staging VPC IGW",
              "env": "staging"
            },
            "vpc_id": "vpc-0da522cc3434e7f4c"
          },
          "depends_on": [
            "aws_vpc.staging-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "staging-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00194a61e8dabf014",
            "id": "nat-024b6e9f0a17a282b",
            "network_interface_id": "eni-0aada4abde51b4567",
            "private_ip": "10.0.2.105",
            "public_ip": "34.250.153.255",
            "subnet_id": "subnet-0688f68126a07d588",
            "tags": {
              "Name": "Staging VPC NGW",
              "env": "staging"
            }
          },
          "depends_on": [
            "aws_eip.staging-nat-eip",
            "aws_subnet.staging-private-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "staging-private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b135d14fb52e6b0",
            "owner_id": "845657178663",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-024b6e9f0a17a282b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Staging Private Subnet RT",
              "env": "staging"
            },
            "vpc_id": "vpc-0da522cc3434e7f4c"
          },
          "depends_on": [
            "aws_nat_gateway.staging-ngw",
            "aws_vpc.staging-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "staging-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b4712542a06a66a8",
            "owner_id": "845657178663",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2ed8aed558f2ab8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Staging Public Subnet RT",
              "env": "staging"
            },
            "vpc_id": "vpc-0da522cc3434e7f4c"
          },
          "depends_on": [
            "aws_internet_gateway.staging-igw",
            "aws_vpc.staging-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "staging-private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033317ee5c378b77b",
            "route_table_id": "rtb-02b135d14fb52e6b0",
            "subnet_id": "subnet-0688f68126a07d588"
          },
          "depends_on": [
            "aws_route_table.staging-private-rt",
            "aws_subnet.staging-private-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "staging-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055b84e964edcde2f",
            "route_table_id": "rtb-0b4712542a06a66a8",
            "subnet_id": "subnet-0f77efe065b6c292b"
          },
          "depends_on": [
            "aws_route_table.staging-public-rt",
            "aws_subnet.staging-public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "staging-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845657178663:subnet/subnet-0688f68126a07d588",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0688f68126a07d588",
            "map_public_ip_on_launch": false,
            "owner_id": "845657178663",
            "tags": {
              "Name": "staging Private Subnet",
              "env": "staging"
            },
            "vpc_id": "vpc-0da522cc3434e7f4c"
          },
          "depends_on": [
            "aws_vpc.staging-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "staging-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845657178663:subnet/subnet-0f77efe065b6c292b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f77efe065b6c292b",
            "map_public_ip_on_launch": false,
            "owner_id": "845657178663",
            "tags": {
              "Name": "staging Public Subnet",
              "env": "staging"
            },
            "vpc_id": "vpc-0da522cc3434e7f4c"
          },
          "depends_on": [
            "aws_vpc.staging-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "staging-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845657178663:vpc/vpc-0da522cc3434e7f4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eeb06c7293840b8d",
            "default_route_table_id": "rtb-08780b23d151e6df7",
            "default_security_group_id": "sg-09c92a38216272cc6",
            "dhcp_options_id": "dopt-72a7d614",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0da522cc3434e7f4c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08780b23d151e6df7",
            "owner_id": "845657178663",
            "tags": {
              "Name": "staging_vpc",
              "env": "staging"
            }
          }
        }
      ]
    }
  ]
}